--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,18 @@
 
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css">
 
+    <link rel="stylesheet" href="/styles/display-tweets.css" type="text/css">
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <script src="scripts/compose-char-counter.js" type="text/javascript"></script>
+
+    <!-- jQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
 
   <body>
@@ -48,7 +55,7 @@
       </div>
     </nav>
 
-    <header>
+    <header class="profile-header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -60,6 +67,8 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+
+      <!-- tweet input and post -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
@@ -71,6 +80,50 @@
           </div>
         </form>
       </section>
+      <!-- new tweet display -->
+
+      <section class="tweet-container">
+  
+        <article>
+          <header>
+            <div class="avatar-pic">
+              <img src="https://i.imgur.com/73hZDYK.png" alt="">
+              <p>Newton</p>
+            </div>            
+            <div class="name">
+              <p>@SirIsaac</p>
+            </div>
+          </header>
+          
+          <div class="posted-tweet">
+            <p>If I have seen further it is by standing on the shoulders of giants</p>
+            <hr>
+          </div>
+
+          <footer>
+            <div class="posted-on">
+              <p>10 days ago</p>
+            </div>
+
+            <div class="flag-retweet-like">
+              <span class="icon flag">
+                <i class="fas fa-flag"></i>
+              </span>
+              <span class="icon retweet">
+                <i class="fas fa-retweet"></i>
+              </span>
+              <span class="icon like">
+                <i class="fas fa-heart"></i>
+              </span>
+            </div>
+          </footer>
+
+        </article>
+
+
+      </section>
+
+
     </main>
   </body>
 </html>
