--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
 
       <section class="tweet-container">
   
-        <article>
+        <article class="article-class">
           <header>
             <div class="avatar-pic">
               <img src="https://i.imgur.com/73hZDYK.png" alt="">
