--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
 
     <!-- jQuery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- timeago CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   </head>
 
   <body>
@@ -71,7 +74,7 @@
       <!-- tweet input and post -->
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets/">
+        <form id="new-tweet-form" method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="tweet-description">
@@ -82,8 +85,8 @@
       </section>
       <!-- new tweet display -->
 
-      <section class="tweet-container">
-  
+      <section id="tweet-container"> 
+        <!-- <div class="tweet-container">
         <article class="article-class">
           <header>
             <div class="avatar-pic">
@@ -119,7 +122,7 @@
           </footer>
 
         </article>
-
+      </div> -->
 
       </section>
 
