create header and input form elements

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
       <section id="tweet-container"> 
         <!-- <div class="tweet-container">
         <article class="article-class">
-          <header>
+          <heaer>
             <div class="avatar-pic">
               <img src="https://i.imgur.com/73hZDYK.png" alt="">
               <p>Newton</p>
