--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
 
       <section id="tweet-container"> 
         <!-- <div class="tweet-container">
-        <article class="article-class">
+        <article clss="article-class">
           <heaer>
             <div class="avatar-pic">
               <img src="https://i.imgur.com/73hZDYK.png" alt="">
