--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
         <!-- <div class="tweet-container">
         <article clss="article-class">
           <heaer>
-            <div class="avatar-pic">
+            <div css="avatar-pic">
               <img src="https://i.imgur.com/73hZDYK.png" alt="">
               <p>Newton</p>
             </div>            
