create fixed scrolling for tweets and header elements in mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -63,13 +63,14 @@
     </nav>
 
     <div class="wrapper">
+      
       <header class="profile-header">
         <div>
             <img id="header-img"src="/images/profile-hex.png"> 
         </div>
-        <br>
-        <div>
-            <h2>Amy Mansell</h2>
+        <!-- <br> -->
+        <div class="profile-name">
+            <h2><span class="bold-name">Amy</span> Mansell</h2>
         </div>
       </header>
  
@@ -83,7 +84,7 @@
         <p id="error-message">
         </p>
         <i class="fas fa-exclamation-triangle"></i>
-      </section class="error-section">
+      </section>
 
       <!-- tweet input and post -->
       <section class="new-tweet">
@@ -107,3 +108,4 @@
 
   </body>
 </html>
+
