try and make the nav element transition to a solid colour on scroll, so far unsuccessful using jQuery functions

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
   <body>
     <!-- Top nav bar (fixed) -->
 
-    <nav>
+    <nav class="nav">
       <div class="nav-logo">
         <span >tweeter</span>
       </div>
